success error sdk

--- a/src/app/landing/home/home.component.html
+++ b/src/app/landing/home/home.component.html
@@ -9,7 +9,7 @@
                 <p>The credit limit is set based on the value of Collateral, Supporting securities, Properties, etc</p>
             </div>
             <div class="mt-4 button_resp">
-                <a href="#" class="primary-button-light button-sm mb-15-xs">Get Started</a>
+                <a class="primary-button-light button-sm mb-15-xs" (click)="onGetStarted()">Get Started</a>
             </div>
         </div>
     </div>
