--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
     <app-loader></app-loader>
 </div>
 }
+<div class="row">
+    <div id="sumsub-websdk-container"></div>
+</div>
 <router-outlet></router-outlet>
