--- a/src/app/auth/verify-otp/verify-otp.component.html
+++ b/src/app/auth/verify-otp/verify-otp.component.html
@@ -1,6 +1,6 @@
 <div class="login-main">
     <div class="">
-        <button type="button" class="btn btn-dark-bg mb-3 mx-0">
+        <button type="button" (click)="onBack()" class="btn btn-dark-bg mb-3 mx-0">
             <i class="bi bi-arrow-left"></i>
         </button>
     </div>
@@ -13,7 +13,7 @@
       
         <div class="form-group">
           <label class="col-form-label text-white" for="verificationCode">Verification Code</label>
-          <input class="form-control" formControlName="verificationCode" type="text" id="verificationCode" name="verificationCode" required placeholder="Verification Code">
+          <input class="form-control" [(ngModel)]="smsOtp" [ngModelOptions]="{standalone: true}"  type="text" id="verificationCode" required placeholder="Verification Code">
         </div>
       </div>   
       <div class="form-group mb-0 text-end mb-2">
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group row my-4">
         <div class="col-12">
-          <button class="btn btn-orange btn-block m-0 w-100" type="submit">Verify</button>
+          <button class="btn btn-orange btn-block m-0 w-100" type="button" [disabled]="smsOtp?.length !== 6" (click)="onVerify()">Verify</button>
         </div>
       </div>
     
