--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -69,6 +69,10 @@
   color:#fff;
 }
 
+.form-select {
+  padding: .375rem 0.75rem !important;
+  --bs-form-select-bg-img: none !important;
+}
 /**=====================
     25. Authentication CSS Ends
 ==========================**/
