--- a/src/app/user-dashboard/wallets/wallets.component.html
+++ b/src/app/user-dashboard/wallets/wallets.component.html
@@ -29,7 +29,7 @@
                                                     </svg>
 
                                                 </span>
-                                                <a class="button-xs text-white text-decoration-none">
+                                                <a (click)="onReceive()" class="button-xs text-white text-decoration-none">
 
                                                     Receive</a>
                                             </div>
@@ -62,12 +62,12 @@
                         <div class="card custom-card">
                             <div class="card-header py-3">
                                 <div class="row align-items-center">
-                                    <div class="col-xl-6 col-md-6 col-7">
+                                    <div class="col-xl-7 col-md-7 col-7">
                                         <h6>Transaction History </h6>
                                     </div>
-                                    <div class="col-12 col-xl-6 col-md-6">
+                                    <div class="col-12 col-xl-5 col-md-5">
                                         <div class="row">
-                                            <div class="col-12 col-md-5">
+                                            <div class="col-12 col-md-6">
                                                 <div
                                                     class="pt-1 primary-button button-xs btn-dark-cuttle d-flex align-items-center">
                                                     <span class="mx-1">
@@ -82,9 +82,9 @@
                                                         Filter</a>
                                                 </div>
                                             </div>
-                                            <div class="col-12 col-md-7">
+                                            <div class="col-12 col-md-6">
                                                 <div
-                                                    class="pt-1 primary-button btn-dark-cuttle button-xs d-flex align-items-center">
+                                                    class="pt-1 primary-button btn-dark-cuttle button-xs">
 
                                                     <a class="button-xs text-white text-decoration-none">
 
@@ -114,7 +114,7 @@
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-hover table-borderless custom-table">
-                                        <thead class="table-dark">
+                                        <thead class="table-head">
                                             <tr>
                                                 <th scope="col">Coin</th>
                                                 <th scope="col">Operation</th>
@@ -145,32 +145,32 @@
 
 
                                                 <!-- Modal -->
-                                                <div class="modal fade" id="exampleModal" tabindex="-1"
+                                                <div class="modal fade wallets-modal" id="exampleModal" tabindex="-1"
                                                     aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                                    <div class="modal-dialog">
+                                                    <div class="modal-dialog modal-dialog-centered modal-lg">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
-                                                                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                                                                <h1 class="modal-title fs-5 text-black" id="exampleModalLabel">
                                                                     Details</h1>
-                                                                <button type="button" class="btn-close"
-                                                                    data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                <!-- <button type="button" class="btn-close"
+                                                                    data-bs-dismiss="modal" aria-label="Close"></button> -->
                                                             </div>
                                                             <div class="modal-body">
                                                                 <div class="container">
                                                                     <div class="row">
                                                                         <div class="col-md-12 text-end">
-                                                                            <a href="">View on Explorer</a>
+                                                                            <a href="" class="modal-link">View on Explorer</a>
                                                                         </div>
                                                                     </div>
                                                                     <div class="row ">
-                                                                        <div class="col-md-3 mx-auto">
+                                                                        <div class="col-md-2 mx-auto">
                                                                             <img class="w-100" src="../../../assets/img/gif/card_check_success.gif"
                                                                                 alt="">
                                                                         </div>
                                                                         <div class="wallets-modal-heading text-center">
                                                                             <p>Confirmed</p>
                                                                             <h4>Received USDT</h4>
-                                                                            <p class="para">Sent Successfully ∙ 15 May 2020 9:00 pm</p>
+                                                                            <p class="para mb-3">Sent Successfully ∙ 15 May 2020 9:00 pm</p>
                                                                               <div class="d-flex align-items-center justify-content-center">
                                                                                 <button type="button" class="btn btn-primary btn-grey-sm d-flex align-items-center">
                                                                                     <svg class="me-2" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -180,36 +180,80 @@
                                                                                 </button>
                                                                               </div>  
                                                                         </div>
+                                                                        <div class="card custom-card-modal my-3">
+                                                                            <div class="card-body">
+                                                                                <div class="row">
+                                                                                    <div class="col-md-12">
+                                                                                        <div class="row">
+                                                                                            <div class="col-md-6">
+                                                                                                <p class="mb-0">Amount</p>
+                                                                                            </div>
+                                                                                            <div class="col-md-6 text-end">
+                                                                                                <p class="mb-0">>0.01 USDT</p>
+                                                                                            </div>
+                                                                                            </div>
+                                                                                            <hr>
+                                                                                            <div class="row">
+                                                                                                <div class="col-md-6">
+                                                                                                    <p class="mb-0">Gas Fee</p>
+                                                                                                </div>
+                                                                                                <div class="col-md-6 text-end">
+                                                                                                    <p class="mb-0">>0.01 USDT</p>
+                                                                                                </div>
+                                                                                                </div>
+                                                                                                <hr>
+                                                                                                <div class="row">
+                                                                                                    <div class="col-md-6">
+                                                                                                        <p class="mb-0">Total Amount</p>
+                                                                                                    </div>
+                                                                                                    <div class="col-md-6 text-end">
+                                                                                                        <h6 class="mb-0">$848.00</h6>
+                                                                                                    </div>
+                                                                                                    </div>
+        
+        
+                                                                                         
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+
+                                                                        <div class="row bottom-section">
+                                                                            <div class="col-md-7">
+                                                                                <p>From</p>
+                                                                                <p>0x8d565sdfsug!#$ksdikawod4f99</p>
+                                                                            </div>
+                                                                            <div class="col-md-5">
+                                                                                <p>To</p>
+                                                                                <p>btrf045QWRHnAKOB4587!LP#34563</p>
+                                                                            </div>
+                                                                        </div>
+                                                                       <!-- <div class="custom-table-modal mt-2">
                                                                         <table class="table table-light">
-                                                                            <thead>
+                                                                            <thead class="table-head-light">
                                                                                 <tr>
-                                                                                    <td scope="col">Network</td>
-                                                                                    <td scope="col">Ethereum Mainnet(ERC-20)</td>
+                                                                                    <td scope="col">Amount</td>
+                                                                                    <td class="text-end" scope="col">>0.01 USDT</td>
                                                     
-                                                                                </tr>
+                                                                                </tr> 
                                                                             </thead>
                                                                             <tbody>
                                                                                 <tr>
-                                                                                    <td scope="row">Deposit Token</td>
-                                                                                    <td>USDT</td>
+                                                                                    <td scope="row">Gas Fee</td>
+                                                                                    <td class="text-end">>0.01 USDT</td>
                                                     
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td scope="row">Deposit Amount</td>
-                                                                                    <th>3000.00</th>
+                                                                                    <td scope="row">Total Amount</td>
+                                                                                    <th class="text-end">$848.00</th>
                                                     
                                                                                 </tr>
                                                     
                                                                             </tbody>
                                                                         </table>
+                                                                       </div> -->
                                                                     </div>
                                                                 </div>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-secondary"
-                                                                    data-bs-dismiss="modal">Close</button>
-                                                                <button type="button" class="btn btn-primary">Save
-                                                                    changes</button>
                                                             </div>
                                                         </div>
                                                     </div>
